Revert "Removed the old aggregation parsing path (#1117)"
This reverts commit 0c61808669eff34c12c66ce1c9b184aeecbd8e78.