@@ -10,19 +10,20 @@ import static com.slack.astra.testlib.MessageUtil.TEST_SOURCE_STRING_PROPERTY;
 import static com.slack.astra.testlib.MetricsUtil.getCount;
 import static com.slack.astra.testlib.MetricsUtil.getTimerCount;
 import static com.slack.astra.testlib.TemporaryLogStoreAndSearcherExtension.MAX_TIME;
-import static com.slack.astra.util.AggregatorFactoriesUtil.createAverageAggregatorFactoriesBuilder;
-import static com.slack.astra.util.AggregatorFactoriesUtil.createExtendedStatsAggregatorFactoriesBuilder;
-import static com.slack.astra.util.AggregatorFactoriesUtil.createFiltersAggregatorFactoriesBuilder;
-import static com.slack.astra.util.AggregatorFactoriesUtil.createGenericDateHistogramAggregatorFactoriesBuilder;
-import static com.slack.astra.util.AggregatorFactoriesUtil.createMaxAggregatorFactoriesBuilder;
-import static com.slack.astra.util.AggregatorFactoriesUtil.createMinAggregatorFactoriesBuilder;
-import static com.slack.astra.util.AggregatorFactoriesUtil.createSumAggregatorFactoriesBuilder;
-import static com.slack.astra.util.AggregatorFactoriesUtil.createTermsAggregatorFactoriesBuilder;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThatExceptionOfType;
 
 import brave.Tracing;
 import com.slack.astra.logstore.LogMessage;
+import com.slack.astra.logstore.search.aggregations.AvgAggBuilder;
+import com.slack.astra.logstore.search.aggregations.DateHistogramAggBuilder;
+import com.slack.astra.logstore.search.aggregations.ExtendedStatsAggBuilder;
+import com.slack.astra.logstore.search.aggregations.FiltersAggBuilder;
+import com.slack.astra.logstore.search.aggregations.MaxAggBuilder;
+import com.slack.astra.logstore.search.aggregations.MinAggBuilder;
+import com.slack.astra.logstore.search.aggregations.MovingAvgAggBuilder;
+import com.slack.astra.logstore.search.aggregations.SumAggBuilder;
+import com.slack.astra.logstore.search.aggregations.TermsAggBuilder;
 import com.slack.astra.proto.schema.Schema;
 import com.slack.astra.proto.service.AstraSearch;
 import com.slack.astra.testlib.SpanUtil;
@@ -42,6 +43,7 @@ import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.RegisterExtension;
+import org.opensearch.search.aggregations.Aggregation;
 import org.opensearch.search.aggregations.bucket.filter.InternalFilters;
 import org.opensearch.search.aggregations.bucket.histogram.InternalAutoDateHistogram;
 import org.opensearch.search.aggregations.bucket.histogram.InternalDateHistogram;
@@ -109,10 +111,12 @@ public class LogIndexSearcherImplTest {
         featureFlagEnabledStrictLogStore.logSearcher.search(
                 TEST_DATASET_NAME,
                 1000,
+                new DateHistogramAggBuilder(
+                    "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                 QueryBuilderUtil.generateQueryBuilder(
                     "Message1", time.toEpochMilli(), time.plusSeconds(10).toEpochMilli()),
                 SourceFieldFilter.fromProto(sourceFieldFilter),
-                createGenericDateHistogramAggregatorFactoriesBuilder())
+                null)
             .hits;
     assertThat(messages).hasSize(1);
     assertThat(messages.get(0).getSource()).hasSize(1);
@@ -150,10 +154,12 @@ public class LogIndexSearcherImplTest {
         featureFlagEnabledStrictLogStore.logSearcher.search(
                 TEST_DATASET_NAME,
                 1000,
+                new DateHistogramAggBuilder(
+                    "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                 QueryBuilderUtil.generateQueryBuilder(
                     "Message1", time.toEpochMilli(), time.plusSeconds(10).toEpochMilli()),
                 SourceFieldFilter.fromProto(sourceFieldFilter),
-                createGenericDateHistogramAggregatorFactoriesBuilder())
+                null)
             .hits;
     assertThat(messages).hasSize(1);
     assertThat(messages.get(0).getSource()).hasSize(1);
@@ -191,10 +197,12 @@ public class LogIndexSearcherImplTest {
         featureFlagEnabledStrictLogStore.logSearcher.search(
                 TEST_DATASET_NAME,
                 1000,
+                new DateHistogramAggBuilder(
+                    "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                 QueryBuilderUtil.generateQueryBuilder(
                     "Message1", time.toEpochMilli(), time.plusSeconds(10).toEpochMilli()),
                 SourceFieldFilter.fromProto(sourceFieldFilter),
-                createGenericDateHistogramAggregatorFactoriesBuilder())
+                null)
             .hits;
     assertThat(messages).hasSize(1);
     assertThat(messages.get(0).getSource()).hasSize(1);
@@ -230,10 +238,12 @@ public class LogIndexSearcherImplTest {
         featureFlagEnabledStrictLogStore.logSearcher.search(
                 TEST_DATASET_NAME,
                 1000,
+                new DateHistogramAggBuilder(
+                    "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                 QueryBuilderUtil.generateQueryBuilder(
                     "Message1", time.toEpochMilli(), time.plusSeconds(10).toEpochMilli()),
                 SourceFieldFilter.fromProto(sourceFieldFilter),
-                createGenericDateHistogramAggregatorFactoriesBuilder())
+                null)
             .hits;
     assertThat(messages).hasSize(1);
     assertThat(messages.get(0).getSource().size()).isGreaterThan(1);
@@ -266,10 +276,12 @@ public class LogIndexSearcherImplTest {
         featureFlagEnabledStrictLogStore.logSearcher.search(
                 TEST_DATASET_NAME,
                 1000,
+                new DateHistogramAggBuilder(
+                    "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                 QueryBuilderUtil.generateQueryBuilder(
                     "Message1", time.toEpochMilli(), time.plusSeconds(10).toEpochMilli()),
                 SourceFieldFilter.fromProto(sourceFieldFilter),
-                createGenericDateHistogramAggregatorFactoriesBuilder())
+                null)
             .hits;
     assertThat(messages).hasSize(1);
     assertThat(messages.get(0).getSource().size()).isEqualTo(0);
@@ -304,10 +316,12 @@ public class LogIndexSearcherImplTest {
         featureFlagEnabledStrictLogStore.logSearcher.search(
                 TEST_DATASET_NAME,
                 1000,
+                new DateHistogramAggBuilder(
+                    "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                 QueryBuilderUtil.generateQueryBuilder(
                     "Message1", time.toEpochMilli(), time.plusSeconds(10).toEpochMilli()),
                 SourceFieldFilter.fromProto(sourceFieldFilter),
-                createGenericDateHistogramAggregatorFactoriesBuilder())
+                null)
             .hits;
     assertThat(messages).hasSize(1);
     assertThat(messages.get(0).getSource().size()).isGreaterThan(1);
@@ -343,10 +357,12 @@ public class LogIndexSearcherImplTest {
         featureFlagEnabledStrictLogStore.logSearcher.search(
                 TEST_DATASET_NAME,
                 1000,
+                new DateHistogramAggBuilder(
+                    "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                 QueryBuilderUtil.generateQueryBuilder(
                     "Message1", time.toEpochMilli(), time.plusSeconds(10).toEpochMilli()),
                 SourceFieldFilter.fromProto(sourceFieldFilter),
-                createGenericDateHistogramAggregatorFactoriesBuilder())
+                null)
             .hits;
     assertThat(messages).hasSize(1);
     assertThat(messages.get(0).getSource().size()).isGreaterThan(1);
@@ -382,10 +398,12 @@ public class LogIndexSearcherImplTest {
         featureFlagEnabledStrictLogStore.logSearcher.search(
                 TEST_DATASET_NAME,
                 1000,
+                new DateHistogramAggBuilder(
+                    "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                 QueryBuilderUtil.generateQueryBuilder(
                     "Message1", time.toEpochMilli(), time.plusSeconds(10).toEpochMilli()),
                 SourceFieldFilter.fromProto(sourceFieldFilter),
-                createGenericDateHistogramAggregatorFactoriesBuilder())
+                null)
             .hits;
     assertThat(messages).hasSize(1);
     assertThat(messages.get(0).getSource().size()).isGreaterThan(1);
@@ -419,10 +437,12 @@ public class LogIndexSearcherImplTest {
         featureFlagEnabledStrictLogStore.logSearcher.search(
                 TEST_DATASET_NAME,
                 1000,
+                new DateHistogramAggBuilder(
+                    "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                 QueryBuilderUtil.generateQueryBuilder(
                     "Message1", time.toEpochMilli(), time.plusSeconds(10).toEpochMilli()),
                 SourceFieldFilter.fromProto(sourceFieldFilter),
-                createGenericDateHistogramAggregatorFactoriesBuilder())
+                null)
             .hits;
     assertThat(messages).hasSize(1);
     assertThat(messages.get(0).getSource().size()).isEqualTo(0);
@@ -455,10 +475,12 @@ public class LogIndexSearcherImplTest {
         featureFlagEnabledStrictLogStore.logSearcher.search(
                 TEST_DATASET_NAME,
                 1000,
+                new DateHistogramAggBuilder(
+                    "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                 QueryBuilderUtil.generateQueryBuilder(
                     "Message1", time.toEpochMilli(), time.plusSeconds(10).toEpochMilli()),
                 SourceFieldFilter.fromProto(sourceFieldFilter),
-                createGenericDateHistogramAggregatorFactoriesBuilder())
+                null)
             .hits;
     assertThat(messages).hasSize(1);
     assertThat(messages.get(0).getSource().size()).isGreaterThan(0);
@@ -483,10 +505,12 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder(
                         "Message1", time.toEpochMilli(), time.plusSeconds(10).toEpochMilli()),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isEqualTo(1);
@@ -498,12 +522,14 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder(
                         "Message1",
                         time.minusSeconds(1).toEpochMilli(),
                         time.plusSeconds(90).toEpochMilli()),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isEqualTo(1);
@@ -515,12 +541,14 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder(
                         "_id:Message1 OR Message2",
                         time.toEpochMilli(),
                         time.plusSeconds(100).toEpochMilli()),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isEqualTo(2);
@@ -532,12 +560,14 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder(
                         "_id:Message1 OR Message2",
                         time.minusSeconds(1).toEpochMilli(),
                         time.plusSeconds(100).toEpochMilli()),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isEqualTo(2);
@@ -562,12 +592,14 @@ public class LogIndexSearcherImplTest {
                 .search(
                     "idx",
                     100,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder(
                         "test1",
                         time.minusSeconds(1).toEpochMilli(),
                         time.plusSeconds(10).toEpochMilli()),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isEqualTo(1);
@@ -578,10 +610,12 @@ public class LogIndexSearcherImplTest {
                 .search(
                     "idx1",
                     100,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder(
                         "test1", time.toEpochMilli(), time.plusSeconds(10).toEpochMilli()),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isEqualTo(1);
@@ -592,10 +626,12 @@ public class LogIndexSearcherImplTest {
                 .search(
                     "idx12",
                     100,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder(
                         "test1", time.toEpochMilli(), time.plusSeconds(10).toEpochMilli()),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isEqualTo(0);
@@ -606,10 +642,12 @@ public class LogIndexSearcherImplTest {
                 .search(
                     "idx1",
                     100,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder(
                         "test", time.toEpochMilli(), time.plusSeconds(10).toEpochMilli()),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isEqualTo(0);
@@ -623,10 +661,12 @@ public class LogIndexSearcherImplTest {
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             10,
+            new DateHistogramAggBuilder(
+                "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
             QueryBuilderUtil.generateQueryBuilder(
                 "Message1", time.toEpochMilli(), time.plusSeconds(2).toEpochMilli()),
             null,
-            createGenericDateHistogramAggregatorFactoriesBuilder());
+            null);
     assertThat(babies.hits.size()).isEqualTo(1);
 
     InternalDateHistogram histogram =
@@ -654,30 +694,36 @@ public class LogIndexSearcherImplTest {
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             10,
+            new DateHistogramAggBuilder(
+                "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
             QueryBuilderUtil.generateQueryBuilder(
                 "customField:value", time.toEpochMilli(), time.plusSeconds(2).toEpochMilli()),
             null,
-            createGenericDateHistogramAggregatorFactoriesBuilder());
+            null);
     assertThat(termQuery.hits.size()).isEqualTo(1);
 
     SearchResult<LogMessage> noTermStrQuery =
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             10,
+            new DateHistogramAggBuilder(
+                "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
             QueryBuilderUtil.generateQueryBuilder(
                 "value", time.toEpochMilli(), time.plusSeconds(2).toEpochMilli()),
             null,
-            createGenericDateHistogramAggregatorFactoriesBuilder());
+            null);
     assertThat(noTermStrQuery.hits.size()).isEqualTo(1);
 
     SearchResult<LogMessage> noTermNumericQuery =
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             10,
+            new DateHistogramAggBuilder(
+                "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
             QueryBuilderUtil.generateQueryBuilder(
                 "Message1", time.toEpochMilli(), time.plusSeconds(2).toEpochMilli()),
             null,
-            createGenericDateHistogramAggregatorFactoriesBuilder());
+            null);
     assertThat(noTermNumericQuery.hits.size()).isEqualTo(1);
   }
 
@@ -699,10 +745,12 @@ public class LogIndexSearcherImplTest {
         strictLogStoreWithoutFts.logSearcher.search(
             TEST_DATASET_NAME,
             10,
+            new DateHistogramAggBuilder(
+                "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
             QueryBuilderUtil.generateQueryBuilder(
                 "customField:value", time.toEpochMilli(), time.plusSeconds(2).toEpochMilli()),
             null,
-            createGenericDateHistogramAggregatorFactoriesBuilder());
+            null);
     assertThat(termQuery.hits.size()).isEqualTo(1);
   }
 
@@ -730,30 +778,36 @@ public class LogIndexSearcherImplTest {
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             10,
+            new DateHistogramAggBuilder(
+                "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
             QueryBuilderUtil.generateQueryBuilder(
                 "_exists_:customField", time.toEpochMilli(), time.plusSeconds(2).toEpochMilli()),
             null,
-            createGenericDateHistogramAggregatorFactoriesBuilder());
+            null);
     assertThat(exists.hits.size()).isEqualTo(1);
 
     SearchResult<LogMessage> termQuery =
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             10,
+            new DateHistogramAggBuilder(
+                "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
             QueryBuilderUtil.generateQueryBuilder(
                 "customField:value", time.toEpochMilli(), time.plusSeconds(2).toEpochMilli()),
             null,
-            createGenericDateHistogramAggregatorFactoriesBuilder());
+            null);
     assertThat(termQuery.hits.size()).isEqualTo(1);
 
     SearchResult<LogMessage> notExists =
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             10,
+            new DateHistogramAggBuilder(
+                "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
             QueryBuilderUtil.generateQueryBuilder(
                 "_exists_:foo", time.toEpochMilli(), time.plusSeconds(2).toEpochMilli()),
             null,
-            createGenericDateHistogramAggregatorFactoriesBuilder());
+            null);
     assertThat(notExists.hits.size()).isEqualTo(0);
   }
 
@@ -789,20 +843,24 @@ public class LogIndexSearcherImplTest {
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             10,
+            new DateHistogramAggBuilder(
+                "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
             QueryBuilderUtil.generateQueryBuilder(
                 "val:[1 TO 3]", time.toEpochMilli(), time.plusSeconds(2).toEpochMilli()),
             null,
-            createGenericDateHistogramAggregatorFactoriesBuilder());
+            null);
     assertThat(rangeBoundInclusive.hits.size()).isEqualTo(3);
 
     SearchResult<LogMessage> rangeBoundExclusive =
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             10,
+            new DateHistogramAggBuilder(
+                "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
             QueryBuilderUtil.generateQueryBuilder(
                 "val:{1 TO 3}", time.toEpochMilli(), time.plusSeconds(2).toEpochMilli()),
             null,
-            createGenericDateHistogramAggregatorFactoriesBuilder());
+            null);
     assertThat(rangeBoundExclusive.hits.size()).isEqualTo(1);
   }
 
@@ -855,50 +913,60 @@ public class LogIndexSearcherImplTest {
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             10,
+            new DateHistogramAggBuilder(
+                "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
             QueryBuilderUtil.generateQueryBuilder(
                 "boolval:true", time.toEpochMilli(), time.plusSeconds(2).toEpochMilli()),
             null,
-            createGenericDateHistogramAggregatorFactoriesBuilder());
+            null);
     assertThat(boolquery.hits.size()).isEqualTo(1);
 
     SearchResult<LogMessage> intquery =
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             10,
+            new DateHistogramAggBuilder(
+                "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
             QueryBuilderUtil.generateQueryBuilder(
                 "intval:1", time.toEpochMilli(), time.plusSeconds(2).toEpochMilli()),
             null,
-            createGenericDateHistogramAggregatorFactoriesBuilder());
+            null);
     assertThat(intquery.hits.size()).isEqualTo(1);
 
     SearchResult<LogMessage> longquery =
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             10,
+            new DateHistogramAggBuilder(
+                "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
             QueryBuilderUtil.generateQueryBuilder(
                 "longval:2", time.toEpochMilli(), time.plusSeconds(2).toEpochMilli()),
             null,
-            createGenericDateHistogramAggregatorFactoriesBuilder());
+            null);
     assertThat(longquery.hits.size()).isEqualTo(1);
 
     SearchResult<LogMessage> floatquery =
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             10,
+            new DateHistogramAggBuilder(
+                "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
             QueryBuilderUtil.generateQueryBuilder(
                 "floatval:3", time.toEpochMilli(), time.plusSeconds(2).toEpochMilli()),
             null,
-            createGenericDateHistogramAggregatorFactoriesBuilder());
+            null);
     assertThat(floatquery.hits.size()).isEqualTo(1);
 
     SearchResult<LogMessage> doublequery =
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             10,
+            new DateHistogramAggBuilder(
+                "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
             QueryBuilderUtil.generateQueryBuilder(
                 "doubleval:4", time.toEpochMilli(), time.plusSeconds(2).toEpochMilli()),
             null,
-            createGenericDateHistogramAggregatorFactoriesBuilder());
+            null);
     assertThat(doublequery.hits.size()).isEqualTo(1);
   }
 
@@ -911,10 +979,12 @@ public class LogIndexSearcherImplTest {
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             2,
+            new DateHistogramAggBuilder(
+                "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
             QueryBuilderUtil.generateQueryBuilder(
                 "apple", time.toEpochMilli(), time.plusSeconds(100).toEpochMilli()),
             null,
-            createGenericDateHistogramAggregatorFactoriesBuilder());
+            null);
     assertThat(apples.hits.stream().map(m -> m.getId()).collect(Collectors.toList()))
         .isEqualTo(Arrays.asList("Message5", "Message3"));
     assertThat(apples.hits.size()).isEqualTo(2);
@@ -941,10 +1011,12 @@ public class LogIndexSearcherImplTest {
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             2,
+            new DateHistogramAggBuilder(
+                "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
             QueryBuilderUtil.generateQueryBuilder(
                 "baby", time.toEpochMilli(), time.plusSeconds(10).toEpochMilli()),
             null,
-            createGenericDateHistogramAggregatorFactoriesBuilder());
+            null);
     assertThat(baby.hits.size()).isEqualTo(1);
     assertThat(baby.hits.get(0).getId()).isEqualTo("Message2");
     assertThat(getCount(MESSAGES_RECEIVED_COUNTER, strictLogStore.metricsRegistry)).isEqualTo(2);
@@ -963,10 +1035,11 @@ public class LogIndexSearcherImplTest {
     strictLogStore.logSearcher.search(
         TEST_DATASET_NAME,
         2,
+        new DateHistogramAggBuilder("1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
         QueryBuilderUtil.generateQueryBuilder(
             "car", time.toEpochMilli(), time.plusSeconds(10).toEpochMilli()),
         null,
-        createGenericDateHistogramAggregatorFactoriesBuilder());
+        null);
 
     // Commit but no refresh. Item is still not available for search.
     strictLogStore.logStore.commit();
@@ -979,10 +1052,11 @@ public class LogIndexSearcherImplTest {
     strictLogStore.logSearcher.search(
         TEST_DATASET_NAME,
         2,
+        new DateHistogramAggBuilder("1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
         QueryBuilderUtil.generateQueryBuilder(
             "car", time.toEpochMilli(), time.plusSeconds(10).toEpochMilli()),
         null,
-        createGenericDateHistogramAggregatorFactoriesBuilder());
+        null);
 
     // Car can be searched after refresh.
     strictLogStore.logStore.refresh();
@@ -995,10 +1069,11 @@ public class LogIndexSearcherImplTest {
     strictLogStore.logSearcher.search(
         TEST_DATASET_NAME,
         2,
+        new DateHistogramAggBuilder("1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
         QueryBuilderUtil.generateQueryBuilder(
             "car", time.toEpochMilli(), time.plusSeconds(10).toEpochMilli()),
         null,
-        createGenericDateHistogramAggregatorFactoriesBuilder());
+        null);
 
     // Add another message to search, refresh but don't commit.
     strictLogStore.logStore.addMessage(SpanUtil.makeSpan(4, "apple baby car", time.plusSeconds(4)));
@@ -1014,10 +1089,12 @@ public class LogIndexSearcherImplTest {
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             2,
+            new DateHistogramAggBuilder(
+                "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
             QueryBuilderUtil.generateQueryBuilder(
                 "baby", time.toEpochMilli(), time.plusSeconds(10).toEpochMilli()),
             null,
-            createGenericDateHistogramAggregatorFactoriesBuilder());
+            null);
     assertThat(babies.hits.size()).isEqualTo(2);
     assertThat(babies.hits.stream().map(m -> m.getId()).collect(Collectors.toList()))
         .isEqualTo(Arrays.asList("Message4", "Message2"));
@@ -1038,9 +1115,11 @@ public class LogIndexSearcherImplTest {
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             1000,
+            new DateHistogramAggBuilder(
+                "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
             QueryBuilderUtil.generateQueryBuilder("", 0L, MAX_TIME),
             null,
-            createGenericDateHistogramAggregatorFactoriesBuilder());
+            null);
 
     assertThat(allIndexItems.hits.size()).isEqualTo(4);
 
@@ -1064,28 +1143,30 @@ public class LogIndexSearcherImplTest {
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             1000,
+            new AvgAggBuilder("1", TEST_SOURCE_LONG_PROPERTY, 0, null),
             QueryBuilderUtil.generateQueryBuilder("", 0L, MAX_TIME),
             null,
-            createAverageAggregatorFactoriesBuilder("1", TEST_SOURCE_LONG_PROPERTY, 0, null));
+            null);
     assertThat(((InternalAvg) scriptNull.internalAggregation).value()).isEqualTo(3.25);
 
     SearchResult<LogMessage> scriptEmpty =
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             1000,
+            new AvgAggBuilder("1", TEST_SOURCE_LONG_PROPERTY, 0, ""),
             QueryBuilderUtil.generateQueryBuilder("", 0L, MAX_TIME),
             null,
-            createAverageAggregatorFactoriesBuilder("1", TEST_SOURCE_LONG_PROPERTY, 0, ""));
+            null);
     assertThat(((InternalAvg) scriptEmpty.internalAggregation).value()).isEqualTo(3.25);
 
     SearchResult<LogMessage> scripted =
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             1000,
+            new AvgAggBuilder("1", TEST_SOURCE_LONG_PROPERTY, 0, "return 9;"),
             QueryBuilderUtil.generateQueryBuilder("", 0L, MAX_TIME),
             null,
-            createAverageAggregatorFactoriesBuilder(
-                "1", TEST_SOURCE_LONG_PROPERTY, 0, "return 9;"));
+            null);
     assertThat(((InternalAvg) scripted.internalAggregation).value()).isEqualTo(9);
   }
 
@@ -1098,28 +1179,27 @@ public class LogIndexSearcherImplTest {
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             1000,
-            QueryBuilderUtil.generateQueryBuilder("", 0L, MAX_TIME),
-            null,
-            createFiltersAggregatorFactoriesBuilder(
+            new FiltersAggBuilder(
                 "1",
                 List.of(),
                 Map.of(
                     "foo",
-                    QueryBuilderUtil.generateQueryBuilder(
-                        String.format(
-                            "%s:<=%s",
-                            LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName,
-                            time.plusSeconds(2).toEpochMilli()),
-                        time.toEpochMilli(),
-                        time.plusSeconds(2).toEpochMilli()),
+                        new FiltersAggBuilder.FilterAgg(
+                            String.format(
+                                "%s:<=%s",
+                                LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName,
+                                time.plusSeconds(2).toEpochMilli()),
+                            true),
                     "bar",
-                    QueryBuilderUtil.generateQueryBuilder(
-                        String.format(
-                            "%s:>%s",
-                            LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName,
-                            time.plusSeconds(2).toEpochMilli()),
-                        time.plusSeconds(2).toEpochMilli(),
-                        time.plusSeconds(10).toEpochMilli()))));
+                        new FiltersAggBuilder.FilterAgg(
+                            String.format(
+                                "%s:>%s",
+                                LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName,
+                                time.plusSeconds(2).toEpochMilli()),
+                            true))),
+            QueryBuilderUtil.generateQueryBuilder("", 0L, MAX_TIME),
+            null,
+            null);
 
     assertThat(((InternalFilters) scriptNull.internalAggregation).getBuckets().size()).isEqualTo(2);
     assertThat(((InternalFilters) scriptNull.internalAggregation).getBuckets().get(0).getDocCount())
@@ -1144,10 +1224,10 @@ public class LogIndexSearcherImplTest {
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             1000,
+            new MinAggBuilder("test", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "0", null),
             QueryBuilderUtil.generateQueryBuilder("", 0L, MAX_TIME),
             null,
-            createMinAggregatorFactoriesBuilder(
-                "test", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "0", null));
+            null);
 
     assertThat(allIndexItems.hits.size()).isEqualTo(4);
 
@@ -1166,10 +1246,10 @@ public class LogIndexSearcherImplTest {
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             1000,
+            new MaxAggBuilder("test", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "0", null),
             QueryBuilderUtil.generateQueryBuilder("", 0L, MAX_TIME),
             null,
-            createMaxAggregatorFactoriesBuilder(
-                "test", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "0", null));
+            null);
 
     assertThat(allIndexItems.hits.size()).isEqualTo(4);
 
@@ -1190,9 +1270,10 @@ public class LogIndexSearcherImplTest {
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             1000,
+            new SumAggBuilder("test", TEST_SOURCE_LONG_PROPERTY, "0", null),
             QueryBuilderUtil.generateQueryBuilder("", 0L, MAX_TIME),
             null,
-            createSumAggregatorFactoriesBuilder("test", TEST_SOURCE_LONG_PROPERTY, "0", null));
+            null);
 
     assertThat(allIndexItems.hits.size()).isEqualTo(4);
 
@@ -1212,10 +1293,10 @@ public class LogIndexSearcherImplTest {
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             1000,
+            new ExtendedStatsAggBuilder("test", TEST_SOURCE_LONG_PROPERTY, "0", null, null),
             QueryBuilderUtil.generateQueryBuilder("", 0L, MAX_TIME),
             null,
-            createExtendedStatsAggregatorFactoriesBuilder(
-                "test", TEST_SOURCE_LONG_PROPERTY, "0", null, null));
+            null);
 
     assertThat(allIndexItems.hits.size()).isEqualTo(4);
 
@@ -1242,16 +1323,11 @@ public class LogIndexSearcherImplTest {
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             1000,
+            new TermsAggBuilder(
+                "1", List.of(), TEST_SOURCE_STRING_PROPERTY, "foo", 10, 0, Map.of("_count", "asc")),
             QueryBuilderUtil.generateQueryBuilder("", 0L, MAX_TIME),
             null,
-            createTermsAggregatorFactoriesBuilder(
-                "1",
-                List.of(),
-                TEST_SOURCE_STRING_PROPERTY,
-                "foo",
-                10,
-                0,
-                Map.of("_count", "asc")));
+            null);
 
     assertThat(allIndexItems.hits.size()).isEqualTo(4);
 
@@ -1259,11 +1335,87 @@ public class LogIndexSearcherImplTest {
     assertThat(stringTerms.getBuckets().size()).isEqualTo(4);
 
     List<String> bucketKeys =
-        stringTerms.getBuckets().stream().map(bucket -> (String) bucket.getKey()).toList();
+        stringTerms.getBuckets().stream()
+            .map(bucket -> (String) bucket.getKey())
+            .collect(Collectors.toList());
     assertThat(bucketKeys.contains("String-1")).isTrue();
     assertThat(bucketKeys.contains("String-3")).isTrue();
     assertThat(bucketKeys.contains("String-4")).isTrue();
     assertThat(bucketKeys.contains("String-5")).isTrue();
+  }
+
+  @Test
+  public void testPipelineAggregation() throws IOException {
+    Instant time = Instant.ofEpochSecond(1593365471);
+    loadTestData(time);
+
+    SearchQuery query =
+        new SearchQuery(
+            TEST_DATASET_NAME,
+            1593365471000L,
+            1593365471000L + 5000L,
+            1000,
+            new DateHistogramAggBuilder(
+                "histo",
+                LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName,
+                "1s",
+                null,
+                null,
+                0,
+                "epoch_ms",
+                Map.of("min", 1593365471000L, "max", 1593365471000L + 5000L),
+                List.of(
+                    new AvgAggBuilder(
+                        "avgTimestamp",
+                        LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName,
+                        null,
+                        null),
+                    new MovingAvgAggBuilder("movAvgCount", "_count", "simple", 2, 1))),
+            List.of(),
+            QueryBuilderUtil.generateQueryBuilder("", 1593365471000L, 1593365471000L + 5000L),
+            null,
+            null);
+
+    SearchResult<LogMessage> allIndexItems =
+        strictLogStore.logSearcher.search(
+            query.dataset,
+            query.howMany,
+            query.aggBuilder,
+            query.queryBuilder,
+            query.sourceFieldFilter,
+            query.aggregatorFactoriesBuilder);
+
+    SearchResultAggregatorImpl<LogMessage> aggregator = new SearchResultAggregatorImpl<>(query);
+    SearchResult<LogMessage> allIndexItemsFinal =
+        aggregator.aggregate(List.of(allIndexItems), true);
+    InternalDateHistogram dateHistogram =
+        (InternalDateHistogram) allIndexItemsFinal.internalAggregation;
+
+    assertThat(dateHistogram.getBuckets().size()).isEqualTo(8);
+    // we collect to a set here, because opensearch doubles up the pipeline aggregators for some
+    // reason
+    assertThat(
+            dateHistogram.getBuckets().get(0).getAggregations().asList().stream()
+                .map(Aggregation::getName)
+                .collect(Collectors.toSet()))
+        .containsExactly("avgTimestamp");
+    for (int i = 1; i < 6; i++) {
+      assertThat(
+              dateHistogram.getBuckets().get(i).getAggregations().asList().stream()
+                  .map(Aggregation::getName)
+                  .collect(Collectors.toSet()))
+          .containsExactly("avgTimestamp", "movAvgCount");
+    }
+    assertThat(
+            dateHistogram.getBuckets().get(6).getAggregations().asList().stream()
+                .map(Aggregation::getName)
+                .collect(Collectors.toSet()))
+        .containsExactly("movAvgCount");
+    assertThat(
+            dateHistogram.getBuckets().get(7).getAggregations().asList().stream()
+                .map(Aggregation::getName)
+                .collect(Collectors.toSet()))
+        .containsExactly("movAvgCount");
   }
 
   @Test
@@ -1275,10 +1427,11 @@ public class LogIndexSearcherImplTest {
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             1000,
+            new TermsAggBuilder(
+                "1", List.of(), "thisFieldDoesNotExist", "foo", 10, 0, Map.of("_count", "asc")),
             QueryBuilderUtil.generateQueryBuilder("", 0L, MAX_TIME),
             null,
-            createTermsAggregatorFactoriesBuilder(
-                "1", List.of(), "thisFieldDoesNotExist", "foo", 10, 0, Map.of("_count", "asc")));
+            null);
 
     assertThat(allIndexItems.hits.size()).isEqualTo(4);
 
@@ -1308,9 +1461,11 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder("_all:apple", 0L, MAX_TIME),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isEqualTo(1);
@@ -1321,9 +1476,11 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder("Message1", 0L, MAX_TIME),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isEqualTo(1);
@@ -1339,9 +1496,11 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder("_all:baby", 0L, MAX_TIME),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isEqualTo(1);
@@ -1351,9 +1510,11 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder("_all:1234", 0L, MAX_TIME),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isEqualTo(2);
@@ -1364,9 +1525,11 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder("baby", 0L, MAX_TIME),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isEqualTo(1);
@@ -1376,9 +1539,11 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder("1234", 0L, MAX_TIME),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isEqualTo(2);
@@ -1393,9 +1558,11 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder("_all:baby", 0L, MAX_TIME),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isEqualTo(2);
@@ -1405,9 +1572,11 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder("_all:1234", 0L, MAX_TIME),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isEqualTo(3);
@@ -1418,9 +1587,11 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder("baby", 0L, MAX_TIME),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isEqualTo(2);
@@ -1430,9 +1601,11 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder("1234", 0L, MAX_TIME),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isEqualTo(3);
@@ -1444,9 +1617,11 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder("", 0L, MAX_TIME),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isEqualTo(3);
@@ -1457,9 +1632,11 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder("app*", 0L, MAX_TIME),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isEqualTo(2);
@@ -1471,9 +1648,11 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder("baby car", 0L, MAX_TIME),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isEqualTo(2);
@@ -1485,9 +1664,11 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder("apple 1234", 0L, MAX_TIME),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isEqualTo(3);
@@ -1498,9 +1679,11 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder("123", 0L, MAX_TIME),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isEqualTo(0);
@@ -1533,9 +1716,11 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder("_all:baby", 0L, MAX_TIME),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isZero();
@@ -1546,9 +1731,11 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder("_all:1234", 0L, MAX_TIME),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isZero();
@@ -1559,9 +1746,11 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder("baby", 0L, MAX_TIME),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isEqualTo(0);
@@ -1573,9 +1762,11 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder("", 0L, MAX_TIME),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isZero();
@@ -1586,9 +1777,11 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder("app*", 0L, MAX_TIME),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isZero();
@@ -1600,9 +1793,11 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder("baby car", 0L, MAX_TIME),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isZero();
@@ -1614,9 +1809,11 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder("apple 1234", 0L, MAX_TIME),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isZero();
@@ -1627,9 +1824,11 @@ public class LogIndexSearcherImplTest {
                 .search(
                     TEST_DATASET_NAME,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder("123", 0L, MAX_TIME),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder())
+                    null)
                 .hits
                 .size())
         .isZero();
@@ -1645,9 +1844,11 @@ public class LogIndexSearcherImplTest {
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME + "miss",
             1000,
+            new DateHistogramAggBuilder(
+                "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
             QueryBuilderUtil.generateQueryBuilder("apple", 0L, MAX_TIME),
             null,
-            createGenericDateHistogramAggregatorFactoriesBuilder());
+            null);
 
     assertThat(allIndexItems.hits.size()).isEqualTo(0);
 
@@ -1671,9 +1872,11 @@ public class LogIndexSearcherImplTest {
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             1000,
+            new DateHistogramAggBuilder(
+                "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
             QueryBuilderUtil.generateQueryBuilder("elephant", 0L, MAX_TIME),
             null,
-            createGenericDateHistogramAggregatorFactoriesBuilder());
+            null);
     assertThat(elephants.hits.size()).isEqualTo(0);
 
     InternalDateHistogram histogram =
@@ -1689,6 +1892,7 @@ public class LogIndexSearcherImplTest {
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             100,
+            null,
             QueryBuilderUtil.generateQueryBuilder(
                 "_id:Message3 OR _id:Message4",
                 time.toEpochMilli(),
@@ -1707,12 +1911,14 @@ public class LogIndexSearcherImplTest {
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             0,
+            new DateHistogramAggBuilder(
+                "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
             QueryBuilderUtil.generateQueryBuilder(
                 "_id:Message3 OR _id:Message4",
                 time.toEpochMilli(),
                 time.plusSeconds(10).toEpochMilli()),
             null,
-            createGenericDateHistogramAggregatorFactoriesBuilder());
+            null);
     assertThat(babies.hits.size()).isEqualTo(0);
 
     InternalDateHistogram histogram =
@@ -1741,9 +1947,11 @@ public class LogIndexSearcherImplTest {
                 strictLogStore.logSearcher.search(
                     "",
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder("test", 0L, MAX_TIME),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder()));
+                    null));
   }
 
   @Test
@@ -1756,9 +1964,11 @@ public class LogIndexSearcherImplTest {
                 strictLogStore.logSearcher.search(
                     null,
                     1000,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder("test", 0L, MAX_TIME),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder()));
+                    null));
   }
 
   @Test
@@ -1771,6 +1981,7 @@ public class LogIndexSearcherImplTest {
                 strictLogStore.logSearcher.search(
                     TEST_DATASET_NAME,
                     0,
+                    null,
                     QueryBuilderUtil.generateQueryBuilder(
                         "test", time.toEpochMilli(), time.plusSeconds(1).toEpochMilli()),
                     null,
@@ -1787,10 +1998,30 @@ public class LogIndexSearcherImplTest {
                 strictLogStore.logSearcher.search(
                     TEST_DATASET_NAME,
                     -1,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder(
                         "test", time.toEpochMilli(), time.plusSeconds(1).toEpochMilli()),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder()));
+                    null));
+  }
+
+  @Test
+  public void testNegativeHistogramInterval() {
+    Instant time = Instant.ofEpochSecond(1593365471);
+    loadTestData(time);
+    assertThatExceptionOfType(IllegalArgumentException.class)
+        .isThrownBy(
+            () ->
+                strictLogStore.logSearcher.search(
+                    TEST_DATASET_NAME,
+                    1,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "-1s"),
+                    QueryBuilderUtil.generateQueryBuilder(
+                        "test", time.toEpochMilli(), time.plusSeconds(1).toEpochMilli()),
+                    null,
+                    null));
   }
 
   @Test
@@ -1803,10 +2034,12 @@ public class LogIndexSearcherImplTest {
                 strictLogStore.logSearcher.search(
                     TEST_DATASET_NAME,
                     1,
+                    new DateHistogramAggBuilder(
+                        "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                     QueryBuilderUtil.generateQueryBuilder(
                         "/", time.toEpochMilli(), time.plusSeconds(1).toEpochMilli()),
                     null,
-                    createGenericDateHistogramAggregatorFactoriesBuilder()));
+                    null));
   }
 
   @Test
@@ -1827,10 +2060,12 @@ public class LogIndexSearcherImplTest {
                   strictLogStore.logSearcher.search(
                       TEST_DATASET_NAME,
                       100,
+                      new DateHistogramAggBuilder(
+                          "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
                       QueryBuilderUtil.generateQueryBuilder(
                           "_id:Message3 OR _id:Message4", 0L, MAX_TIME),
                       null,
-                      createGenericDateHistogramAggregatorFactoriesBuilder());
+                      null);
               if (babies.hits.size() != 2) {
                 searchFailures.addAndGet(1);
               } else {
@@ -1862,10 +2097,12 @@ public class LogIndexSearcherImplTest {
         strictLogStore.logSearcher.search(
             TEST_DATASET_NAME,
             10,
+            new DateHistogramAggBuilder(
+                "1", LogMessage.SystemField.TIME_SINCE_EPOCH.fieldName, "1s"),
             QueryBuilderUtil.generateQueryBuilder(
                 "_id:Message1", time.toEpochMilli(), time.plusSeconds(2).toEpochMilli()),
             null,
-            createGenericDateHistogramAggregatorFactoriesBuilder());
+            null);
     assertThat(index.hits.size()).isEqualTo(1);
   }
 }
